--- a/estilo.css
+++ b/estilo.css
@@ -5,6 +5,15 @@ html {
 main {
     display: flex;
 }
+
+header h2 {
+    margin-top: 0.2rem;
+    opacity: 0.6;
+}
+
+header h1 {
+    margin-bottom: 0;
+}
 #formulario, #itens {
     width: 200px;
 }
@@ -16,4 +25,6 @@ main {
 section > h1 { 
     /* h1 filhos de section */
     margin-top: 0;
+    /* rem- tamanho da font do html- root - rem deixa adptavel a pesso se por em px n adpta*/
+    font-size: 1.2rem;
 }
